     * First users reports! Thanks R., Don!
     * First improvements due to user feedback:
          + Solved configuration problem for some people
          + Improved web page and README: reference to /etc/ethers
       
  Overview of changes in Etherape 0.1.0 (Friday 02-25-2000):
  
     * Diagram resizes with window
     * Basic functionality is all there now, and calls for a minor
       version upgrade. :-)
       
  Overview of changes in Etherape 0.0.8 (Thursday 02-24-2000):
  
     * Correctly (I hope) calculates average traffic intensity for nodes
       and links. The proper constant multiplier should be user defined.
       
  Overview of changes in Etherape 0.0.7 (Thursday 02-24-2000):
  
     * First version showing links among nodes
     * Aborts gracefully if run by non-root.
     * http://etherape.sourceforge.net has a screenshot.
     * Expect proper node size and link width calculation in 0.0.8
       
  Overview of changes in Etherape 0.0.6 (Wednesday 02-23-2000):
  
     * Copied proper libpcap autoconfigure detection function from
       ethereal
     * Added Ethernet address resolution functions from ethereal
       
  Overview of changes in Etherape 0.0.5 (Wednesday 02-23-2000):
  
     * Now uses gnome_canvas to display the diagram
       
  Overview of changes in Etherape 0.0.4 (Monday 02-21-2000):
  
     * Node size is now an average of the last ten seconds traffic.
     * Proper distribution file.
       
  Overview of changes in Etherape 0.0.3 (Sunday 02-20-2000):
  
     * Added gnome support.
     * Substituted hash table for binary tree to store nodes
     * Correctly display hardware addresses.
       
  Overview of changes in Etherape 0.0.2 (Saturday 02-19-2000):
  
     * Displays circles representing nodes and text which will identify
       it eventually.
       
  Overview of Etherape 0.0.1 (Friday 02-18-2000):
  
     * Initial version. Don't even expect it to run.