@@ -36,5 +36,8 @@
 </ol>
 <hr>
 <i>$Id$</i>
+<p><A href="http://sourceforge.net"> 
+<IMG src="http://sourceforge.net/sflogo.php?group_id=2712&amp;type=1"
+width="88" height="31" border="0"></A> 
 </body>
 </html>
